--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,36 @@
+body {
+  background-color: black;
+}
+
 img {
   width: 50%;
 }
+
+.jumbotron {
+  border: solid 3px gray;
+  padding: 10px;
+  margin: 10px;
+}
+
+
 
 .hide {
   display: none;
 }
 
 .item {
-  border: solid 3px black;
+  margin-top: 30px;
+  border: solid 3px gray;
   text-align: center;
+  background-color: white;
+  
+}
+
+.userInfo {
+  margin-top: 30px;
+  border: solid 3px gray;
+  text-align: center;
+  background-color: white;
 }
 
 .buttonCenter {
@@ -17,8 +39,10 @@ img {
 }
 
 .btn {
-  background-color: aqua;
-  border: solid 2px blue;
+  background-color: white;
+  border: solid 3px gray;
+  font-weight: 700;
+  margin:10px;
 }
 
 em {
